@@ -20,6 +20,8 @@ class NMPluginAnnoExtension extends NMPluginExtension {
     NMPluginAnnoExtension(String name, Project project, NMPlugin plugin, NMPluginCoreExtension core) {
         super(name, project, plugin)
         this.core = core
+
+        genericInit()
     }
 
     /**
@@ -39,81 +41,26 @@ class NMPluginAnnoExtension extends NMPluginExtension {
         return this
     }
 
-    void configureCompileTask() {
+    void genericInit() {
         nmp.configuration {
+            Common.configureBuildTasks attachedProject, attachedProject.tasks.compileJava as JavaCompile, genDir
 
-            attachedProject.tasks.compileJava { JavaCompile task ->
-                task.options.encoding = "UTF-8"
-                task.options.generatedSourceOutputDirectory.set genDir.get()
-
-                task.options.forkOptions.jvmArgs += [
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-                        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                        "--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED"
-                ]
-
-                task.doFirst {
-                    attachedProject.delete task.options.generatedSourceOutputDirectory.get().asFile.listFiles()
-
-                    task.options.compilerArgs = task.options.compilerArgs.findAll {
-                        it != "--enable-preview"
-                    }
-                }
-            }
-
+            srcDirs.finalizeValue()
+            resDirs.finalizeValue()
             attachedProject.sourceSets.main.java.srcDirs += srcDirs.get()
             attachedProject.sourceSets.main.resources.srcDirs += resDirs.get()
-        }
-    }
 
-    void setupJabel() {
-        nmp.configuration {
-            attachedProject.tasks.compileJava { JavaCompile task ->
-                task.sourceCompatibility = this.sourceCompatibility.get().majorVersion
+            Common.setupJabel attachedProject, sourceCompatibility, jabelVersion
 
-                task.options.compilerArgs = [
-                        "--release", "8",
-                        "--enable-preview",
-                        "-Xlint:-options"
-                ]
-            }
-
-            attachedProject.dependencies { DependencyHandler handler ->
-                handler.add "annotationProcessor", "com.pkware.jabel:jabel-javac-plugin:${jabelVersion.get()}"
-                handler.add "compileOnly", "com.pkware.jabel:jabel-javac-plugin:${jabelVersion.get()}"
-            }
-        }
-    }
-
-    void setupDependencies() {
-        nmp.configuration {
             core.attachedProject.dependencies { DependencyHandler handler ->
                 handler.add "compileOnly", attachedProject
                 handler.add "annotationProcessor", attachedProject
             }
         }
-    }
 
-    void initTasks() {
         nmp.initialisation {
             attachedProject.tasks.register "nmpaGenerateProcessorsFile", GenerateProcessorsFileTask, this
         }
-    }
-
-    void genericInit() {
-        configureCompileTask()
-        setupJabel()
-        setupDependencies()
-        initTasks()
     }
 
     @Override
